--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@theunwalked/offrecord",
-  "version": "0.0.2",
+  "name": "@utilarium/offrecord",
+  "version": "0.0.3",
   "description": "offrecord keeps secrets off the record - secure secret handling, redaction, and memory safety utilities.",
   "type": "module",
   "main": "./dist/offrecord.cjs",
@@ -32,7 +32,12 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "docs:dev": "cd docs && cp ../README.md public/ && npm install && npm run dev",
+    "docs:build": "cd docs && cp ../README.md public/ && npm install && npm run build",
+    "docs:preview": "cd docs && npm run preview",
+    "docs:test": "cd docs && npm install && npm run test",
+    "docs:coverage": "cd docs && npm install && npm run coverage"
   },
   "keywords": [
     "security",
