--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@utilarium/offrecord",
-  "version": "0.0.4",
+  "version": "0.0.5-dev.0",
   "description": "offrecord keeps secrets off the record - secure secret handling, redaction, and memory safety utilities.",
   "type": "module",
   "main": "./dist/offrecord.cjs",
